# note-app

./: .gitignore  Cargo.toml  LICENSE  readme.md
app/: .gitignore  package-lock.json  package.json
app/public/: index.html
app/src/: App.css  App.js  DataProvider.js
app/src/Components/Login/: Login.css  Login.jsx
app/src/Components/Main/: Main.css  Main.jsx
app/src/Components/Note/: Note.css  Note.jsx
app/src/Components/RandNum/: RandNum.jsx
app/src/Components/Register/: Register.css  Register.jsx
app/src/Components/SidePreview/: SidePreview.css  SidePreview.jsx
app/src/Components/Sidebar/: Sidebar.css  Sidebar.jsx
migrations/: 20240514124735_init.up.sql  20240522125320_users_table_with_notes_and_relation_one-to-many.down.sql  20240522125320_users_table_with_notes_and_relation_one-to-many.up.sql
src/: handler.rs  jwt_auth.rs  main.rs  model.rs  response.rs  route.rs  utils.rs
