[package]
name = "note-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
rand = "0.9.0-alpha.1"
serde = "1.0.200"
serde_json = "1.0.116"
log = "0.4.21"
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"
tower-http = { version = "0.5.2", features = ["cors"] }
