[package]
name = "note-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "full"] }
rand = "0.9.0-alpha.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = { version = "1.0.117"}
log = "0.4.21"
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
time = "0.3.36"
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["std"] }
regex = "1.10.4"
email_address = "0.2.4"
